--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="card" style="width: 18rem;">
+      <!--<div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
@@ -28,7 +28,7 @@
           </p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
-      </div>
+      </div>-->
     </div>
     <script>
       //   var cartItemCounter = document.querySelector("span.cart-item-count");
@@ -40,16 +40,21 @@
       jQuery.ajax("/products").done(function (data) {
         console.log(data);
         var content;
-        $.each(data, function (i, item) {
+        $.each(data.products, function (i, item) {
           console.log(item);
           content +=
             '<div class="card" style="width: 18rem;">' +
             item.id +
-            '<img src="..." class="card-img-top" alt="..." />' +
+            '<img src="' +
+            item.image +
+            '" class="card-img-top" alt="..." />' +
             '<div class="card-body"' +
-            ' <h5 class="card-title">Card title</h5>' +
+            ' <h5 class="card-title">' +
+            item.title +
+            "</h5>" +
             +'<p class="card-text">' +
-            "Some quick example text to build on the card title and make up the bulk of the card's content.</p>" +
+            +item.vendor +
+            ".</p>" +
             ' <a href="#" class="btn btn-primary">Go somewhere</a></div></div>';
         });
         document.querySelector(".container").innerHTML = content;
